cmake_minimum_required (VERSION 2.8)
project (arm-examples)

if (NOT TIVAWARE_INSTALL_DIR)
     set(TIVAWARE_INSTALL_DIR "~/projects/TivaWare")
     message(STATUS "No TIVAWARE_INSTALL_DIR specified, using default: " ${TIVAWARE_INSTALL_DIR})
else ()
     message(STATUS "Using TIVAWARE_INSTALL_DIR: " ${TOOLCHAIN_INSTALL_DIR})
endif()

set (common_SOURCES "${CMAKE_SOURCE_DIR}/common/startup.c")
set (LINKER_SCRIPT "${CMAKE_SOURCE_DIR}/common/arm-examples.ld")
include_directories (${TIVAWARE_INSTALL_DIR})

message(STATUS "---------------------------------------------")
message(STATUS " ")
message(STATUS " ")
message(STATUS "Info: Using the following variables")
message(STATUS "Info: Ensure that they match your environment")
message(STATUS " ")
message(STATUS "Info: TIVAWARE_INSTALL_DIR:  " ${TIVAWARE_INSTALL_DIR})
message(STATUS "Info: TOOLCHAIN_INSTALL_DIR: " ${TOOLCHAIN_INSTALL_DIR})
message(STATUS "Info: CROSS_COMPILE:         " ${CROSS_COMPILE})
message(STATUS " ")
message(STATUS " ")
message(STATUS "---------------------------------------------")

add_subdirectory (drivers)
add_subdirectory (apps)
